--- a/Telephone numbers encrypt app/Telephone numbers encrypt app.csproj
+++ b/Telephone numbers encrypt app/Telephone numbers encrypt app.csproj
@@ -65,6 +65,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="検索.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="検索.Designer.cs">
+      <DependentUpon>検索.cs</DependentUpon>
+    </Compile>
     <Compile Include="編集window.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="検索.resx">
+      <DependentUpon>検索.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="編集window.resx">
       <DependentUpon>編集window.cs</DependentUpon>
     </EmbeddedResource>
